--- a/.github/workflows/codedeploy.yml
+++ b/.github/workflows/codedeploy.yml
@@ -7,8 +7,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
+    paths:
+    - 'src/**'
   pull_request: 
     branches: [ main ]
+    paths:
+    - 'src/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,17 +32,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: checking for changes in src!
-        
-      - name: Paths Changes Filter
-      - uses: dorny/paths-filter@v2
-        id: changes
-        with: 
-          filters: |
-            src:
-              - 'src/**'
-        
-        #check the condition
-        if: steps.changes.outputs.src == 'true'
-        name: run success
+      
+      
         
         
