--- a/.github/workflows/codedeploy.yml
+++ b/.github/workflows/codedeploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: BuildCode
 
 # Controls when the action will run. 
 on:
@@ -28,10 +28,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo "checking for changes in src!"
+      
+      
+      
+      
       
       
         
